--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "pure-css-loader": "^2.0.1",
     "vue": "^2.1.0"
   },
   "devDependencies": {
